# iceberg-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README.md  meson.options  sitemap.xml
.github/: .licenserc.yaml
.github/workflows/: hive_test.yml  test.yml
api/: classes.html  dir_f51fe74ea6bc2b1b900619895eaa63be.html  files.html  hierarchy.html
api/search/: all_5.js  all_8.js  functions_d.js
api/xml/: classiceberg_1_1FileScanTask.xml  classiceberg_1_1IncrementalScan.xml  concepticeberg_1_1IsIncrementalScan.xml  expire__snapshots_8cc.xml  expressions_8h.xml  fast__append_8cc.xml  fast__append_8h.xml  fast__append__test_8cc.xml  iceberg__export_8h.xml  in__memory__catalog__test_8cc.xml  index.xml  matchers_8h.xml  namespace_0d273.xml  namespaceiceberg_1_1_0d168.xml  namespaceiceberg_1_1_0d180.xml  namespaceiceberg_1_1_0d212.xml  namespaceiceberg_1_1_0d222.xml  namespaceiceberg_1_1_0d224.xml  namespaceiceberg_1_1_0d239.xml  namespaceiceberg_1_1_0d247.xml  namespaceiceberg_1_1_0d255.xml  namespaceiceberg_1_1_0d268.xml  namespaceiceberg_1_1_0d273.xml  namespaceiceberg_1_1_0d278.xml  namespaceiceberg_1_1_0d280.xml  namespaceiceberg_1_1_0d285.xml  namespaceiceberg_1_1_0d287.xml  namespaceiceberg_1_1_0d289.xml  namespaceiceberg_1_1_0d290.xml  namespaceiceberg_1_1_0d292.xml  namespaceiceberg_1_1_0d299.xml  namespaceiceberg_1_1_0d305.xml  namespaceiceberg_1_1_0d321.xml  namespaceiceberg_1_1_0d332.xml  namespaceiceberg_1_1_0d333.xml  namespaceiceberg_1_1_0d347.xml  namespaceiceberg_1_1_0d351.xml  namespaceiceberg_1_1_0d367.xml  namespaceiceberg_1_1_0d401.xml  namespaceiceberg_1_1_0d425.xml  (+25 more)
ci/scripts/: build_iceberg.sh
cmake_modules/: IcebergThirdpartyToolchain.cmake
mkdocs/: mkdocs.yml
mkdocs/docs/api/: files.html  functions_c.html  functions_i.html  functions_k.html  functions_s.html  functions_vars_k.html
mkdocs/docs/catalogs/: hadoop.md  hive.md
mkdocs/site/: sitemap.xml
mkdocs/site/api/: annotated.html  concepticeberg_1_1IsIncrementalScan.html  files.html  table__scan_8h_source.html
src/iceberg/: CMakeLists.txt  file_io.h  file_io_registry.cc  file_io_registry.h  iceberg-config.cmake.in  table_metadata.cc
src/iceberg/arrow/: arrow_file_io.h  arrow_io.cc  (+6 more)
src/iceberg/catalog/hadoop/: CMakeLists.txt  hadoop_catalog.cc  hadoop_catalog.h  hadoop_catalog_properties.cc  hadoop_catalog_properties.h  hadoop_file_layout.cc  hadoop_file_layout.h  hadoop_lock_manager.cc  hadoop_lock_manager.h  hadoop_log.cc  hadoop_log.h  hadoop_table_operations.cc  hadoop_table_operations.h  hadoop_tables.cc  hadoop_tables.h  iceberg_hadoop_export.h  meson.build
test/: CMakeLists.txt  avro_schema_test.cc  name_mapping_test.cc
tests/: arrow_s3_integration_test.cc
(+203 files in other folders)
